--- a/html/Viewer.html
+++ b/html/Viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Tk::Text::Viewer Version 0.90</title>
+<title>Tk::Text::Viewer Version 0.91</title>
 <link rel="stylesheet" href="./html/docs.css" type="text/css" />
 <link rev="made" href="mailto:root@localhost" />
 </head>
@@ -82,7 +82,7 @@ this label if the widget is used in a non English application.
 </li>
 Change one label widget option (for example cursor).
 <p></p>
-<li><strong><code>$text_view</code>-&gt;<code>LabelConfig</code>(<em>{text=&gt;'Find:',-cursor=&gt;'dot',...</em>)</strong><br />
+<li><strong><code>$text_view</code>-&gt;<code>LabelConfig</code>(<em>{text=&gt;'Find:',-cursor=&gt;'dot',...}</em>)</strong><br />
 </li>
 Replace label widget options with your own set of options.
 <strong>Do not</strong>  change the 'Name' option of the label widget.
@@ -131,12 +131,19 @@ Clicking ``n'' will move to next search match.
 <dd>
 Clicking ``N'' will move to next previous match.
 </dd>
+<p></p>
+<dt><strong><a name="item_%22control%2da%22">``Control-A''</a></strong><br />
+</dt>
+<dd>
+Find all occurrences of searched item.
+</dd>
 <p></p></dl>
 <p>
 </p>
 <hr />
 <h1><a name="see_also">SEE ALSO</a></h1>
-<p><a href="/Tk/Text.html">Tk::Text</a>, <a href="/Tk/Widget.html">Tk::Widget</a>, <a href="/Tk/More.html">Tk::More</a> ,Tk documentation.</p>
+<p><a href="#">viewer.pl</a> - A utility using <code>Tk::Text::Viewer</code> included with this package.</p>
+<p><a href="/Tk/Text.html">Tk::Text</a>, <a href="/Tk/Widget.html">Tk::Widget</a>, <a href="/Tk/More.html">Tk::More</a>, Tk documentation.</p>
 <p>
 </p>
 <hr />
