--- a/html/Viewer.html
+++ b/html/Viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Tk::Text::Viewer Version 0.91</title>
+<title>Tk::Text::Viewer Version 0.93</title>
 <link rel="stylesheet" href="./html/docs.css" type="text/css" />
 <link rev="made" href="mailto:root@localhost" />
 </head>
@@ -18,6 +18,7 @@
 	<li><a href="#description">DESCRIPTION</a></li>
 	<li><a href="#widget_methods">WIDGET METHODS</a></li>
 	<li><a href="#bindings">BINDINGS</a></li>
+	<li><a href="#unicode">UNICODE</a></li>
 	<li><a href="#see_also">SEE ALSO</a></li>
 	<li><a href="#author">AUTHOR</a></li>
 </ul>
@@ -102,42 +103,47 @@ about parameters. See <a href="/Tk/Entry.html">the Tk::Entry manpage</a> for val
 <p>For inherited bindings look <a href="/Tk/Text.html">the Tk::Text manpage</a>.
 Following are class specific bindings.</p>
 <dl>
-<dt><strong><a name="item_%22space%22">``Space''</a></strong><br />
+<dt><strong><a name="item__22space_22">``Space''</a></strong><br />
 </dt>
 <dd>
 Clicking Space will move text one page ahead.
 </dd>
 <p></p>
-<dt><strong><a name="item_%22backspace%22">``BackSpace''</a></strong><br />
+<dt><strong><a name="item__22backspace_22">``BackSpace''</a></strong><br />
 </dt>
 <dd>
 Clicking BackSpace will move text one page up.
 </dd>
 <p></p>
-<dt><strong><a name="item_%22slash%22">``Slash''</a></strong><br />
+<dt><strong><a name="item__22slash_22">``Slash''</a></strong><br />
 </dt>
 <dd>
 Clicking ``/'' will open text search window.
 </dd>
 <p></p>
-<dt><strong><a name="item_%22n%22">``n''</a></strong><br />
+<dt><strong><a name="item__22n_22">``n''</a></strong><br />
 </dt>
 <dd>
 Clicking ``n'' will move to next search match.
 </dd>
 <p></p>
-<dt><strong><a name="item_%22n%22">``N''</a></strong><br />
+<dt><strong><a name="item__22n_22">``N''</a></strong><br />
 </dt>
 <dd>
 Clicking ``N'' will move to next previous match.
 </dd>
 <p></p>
-<dt><strong><a name="item_%22control%2da%22">``Control-A''</a></strong><br />
+<dt><strong><a name="item__22control_2da_22">``Control-A''</a></strong><br />
 </dt>
 <dd>
 Find all occurrences of searched item.
 </dd>
 <p></p></dl>
+<p>
+</p>
+<hr />
+<h1><a name="unicode">UNICODE</a></h1>
+<p>If <strong>$ENV{LANG}</strong> is a 'UTF-8' locale, file load will assume ``utf8'' characters in file.</p>
 <p>
 </p>
 <hr />
@@ -149,7 +155,7 @@ Find all occurrences of searched item.
 <hr />
 <h1><a name="author">AUTHOR</a></h1>
 <p><code>Tk::Text::Viewer</code> was written by Oded S. Resnik &lt;<a href="mailto:raz@raz.co.il">raz@raz.co.il</a>&gt; in 2003.</p>
-<p><strong>Copyright (c) 2003 RAZ Information Systems All rights reserved</strong>.
+<p><strong>Copyright (c) 2003-2004 RAZ Information Systems All rights reserved</strong>.
 <em><a href="http://www.raz.co.il/">http://www.raz.co.il/</a></em></p>
 <p>You may distribute under the terms of either the GNU General Public
 License or the Artistic License, as specified in the Perl README file</p>
